--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -73,7 +73,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Exports/Web/Gotm.io/.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -84,10 +84,20 @@ custom_template/release=""
 variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=true
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=true
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 [preset.3]
 
@@ -131,25 +141,25 @@ images/background_color="transparent"
 tiles/show_name_on_square150x150=false
 tiles/show_name_on_wide310x150=false
 tiles/show_name_on_square310x310=false
-capabilities/all_Joyn=false
-capabilities/code_Generation=false
-capabilities/internet_Client=false
-capabilities/internet_Client_Server=false
-capabilities/private_Network_Client_Server=false
+capabilities/allJoyn=false
+capabilities/codeGeneration=false
+capabilities/internetClient=false
+capabilities/internetClientServer=false
+capabilities/privateNetworkClientServer=false
 capabilities/appointments=false
-capabilities/blocked_Chat_Messages=false
+capabilities/blockedChatMessages=false
 capabilities/chat=false
 capabilities/contacts=false
-capabilities/enterprise_Authentication=false
-capabilities/music_Library=false
-capabilities/objects_3D=false
-capabilities/pictures_Library=false
-capabilities/phone_Call=false
-capabilities/removable_Storage=false
-capabilities/shared_User_Certificates=false
-capabilities/user_Account_Information=false
-capabilities/videos_Library=false
-capabilities/voip_Call=false
+capabilities/enterpriseAuthentication=false
+capabilities/musicLibrary=false
+capabilities/objects3D=false
+capabilities/picturesLibrary=false
+capabilities/phoneCall=false
+capabilities/removableStorage=false
+capabilities/sharedUserCertificates=false
+capabilities/userAccountInformation=false
+capabilities/videosLibrary=false
+capabilities/voipCall=false
 capabilities/bluetooth=false
 capabilities/location=false
 capabilities/microphone=false
@@ -182,6 +192,7 @@ application/export_method_debug=1
 application/provisioning_profile_uuid_release=""
 application/code_sign_identity_release=""
 application/export_method_release=0
+application/targeted_device_family=2
 application/name=""
 application/info="Made with Godot Engine"
 application/identifier=""
@@ -196,10 +207,7 @@ user_data/accessible_from_itunes_sharing=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
 privacy/photolibrary_usage_description=""
-orientation/portrait=true
-orientation/landscape_left=true
-orientation/landscape_right=true
-orientation/portrait_upside_down=true
+icons/generate_missing=false
 required_icons/iphone_120x120=""
 required_icons/ipad_76x76=""
 required_icons/app_store_1024x1024=""
@@ -214,6 +222,7 @@ storyboard/custom_image@2x=""
 storyboard/custom_image@3x=""
 storyboard/use_custom_bg_color=false
 storyboard/custom_bg_color=Color( 0, 0, 0, 1 )
+launch_screens/generate_missing=false
 landscape_launch_screens/iphone_2436x1125=""
 landscape_launch_screens/iphone_2208x1242=""
 landscape_launch_screens/ipad_1024x768=""
@@ -248,6 +257,7 @@ application/info="Made with Godot Engine"
 application/icon=""
 application/identifier=""
 application/signature=""
+application/app_category="Games"
 application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
@@ -290,23 +300,29 @@ keystore/release_password=""
 one_click_deploy/clear_previous_install=true
 version/code=1
 version/name="1.0"
+version/min_sdk=19
+version/target_sdk=30
 package/unique_name="org.godotengine.$genname"
 package/name=""
 package/signed=true
+package/classify_as_game=true
+package/retain_data_on_uninstall=false
+package/exclude_from_recents=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/32_bits_framebuffer=true
 graphics/opengl_debug=false
 xr_features/xr_mode=0
-xr_features/degrees_of_freedom=0
 xr_features/hand_tracking=0
-xr_features/focus_awareness=false
+xr_features/hand_tracking_frequency=0
+xr_features/passthrough=0
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
+user_data_backup/allow=false
 command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
