skybox shader now works

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Stations/MainTower.tscn"]
+open_scenes=["res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Stations/MainTower.tscn", "res://NPCs/Executioner.tscn"]
 
 [ScriptEditor]
 
