--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Stations/MainTower.tscn", "res://NPCs/Executioner.tscn"]
+open_scenes=["res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Stations/MainTower.tscn", "res://NPCs/Executioner.tscn", "res://addons/naejimer_3d_planet_generator/scenes/star.tscn", "res://Player/Camera.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://Player/Test-Player.gd", "res://UI/UI.gd", "res://ECS/Weapon.gd"]
+open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://Player/PlayerCamera.gd", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://Player/Test-Player.gd", "res://UI/UI.gd", "res://ECS/Weapon.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
