Pushing before powerdown

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -14,4 +14,12 @@ scripts=["res://Player/PlayerCamera.gd", "res://NPCs/Stations/Station.gd", "res:
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.466181, 0.466181, 0.466181, 1, 1, 1, 1, 1, 0.804743, 0.804743, 0.804743, 1, 0.622638, 0.832866, 1, 1, 4.81307e-07, 0.329628, 0.512982, 1, 0, 0, 0, 1, 0.516781, 0.634097, 1, 1, 0.517647, 0.635294, 1, 1)
+recent_presets=PackedColorArray(0.564962, 0.564962, 0.564962, 1, 0.8301, 0.451618, 0.149741, 1, 0.741385, 0.741385, 0.741385, 1, 0.980949, 0.589522, 0.862598, 1, 0.783426, 0.674424, 1, 1, 0.847474, 0.847474, 0.847474, 1, 0.657198, 0.955621, 0, 1, 0.472468, 0.693486, 0, 1, 0.882644, 0.474959, 0.494213, 1)
+
+[linked_properties]
+
+Panel:scale=true
+MarginContainer:scale=true
+StaticBody3D:scale=true
+Node3D:scale=true
+CharacterBody3D:scale=true
