--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,15 +8,31 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-429
 dock_hsplit_4=0
+dock_1_selected_tab_idx=0
+dock_2_selected_tab_idx=0
+dock_3_selected_tab_idx=0
+dock_4_selected_tab_idx=0
+dock_5_selected_tab_idx=0
+dock_6_selected_tab_idx=0
+dock_7_selected_tab_idx=0
+dock_8_selected_tab_idx=0
+dock_floating={}
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Executioner.tscn", "res://NPCs/Stations/MainTower.tscn"]
+open_scenes=PackedStringArray("res://UI/StartMenu.tscn", "res://UI/GameUI.tscn", "res://NPCs/Stations/EnemyShipYard.tscn", "res://Root.tscn", "res://ProxyamStarsystem/GameWorld.tscn", "res://NPCs/Executioner.tscn", "res://NPCs/Stations/MainTower.tscn")
+current_scene="res://NPCs/Stations/MainTower.tscn"
+center_split_offset=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -24,6 +40,7 @@ open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/ana
 open_help=[]
 script_split_offset=70
 list_split_offset=0
+selected_script="res://plugins/addons/analog/analog.gd"
 
 [editor_log]
 
@@ -34,3 +51,9 @@ log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
+
+[ShaderEditor]
+
+open_shaders=[]
+split_offset=0
+selected_shader=""
