more porting work

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,11 +1,11 @@
 list=Array[Dictionary]([{
-"base": &"Area3D",
+"base": &"Area",
 "class": &"Bullet",
 "icon": "",
 "language": &"GDScript",
 "path": "res://ECS/Bullet.gd"
 }, {
-"base": &"CharacterBody3D",
+"base": &"KinematicBody",
 "class": &"Crusier",
 "icon": "",
 "language": &"GDScript",
@@ -17,13 +17,13 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://NPCs/Stations/DefenseStation.gd"
 }, {
-"base": &"CharacterBody3D",
+"base": &"KinematicBody",
 "class": &"Drone",
 "icon": "",
 "language": &"GDScript",
 "path": "res://NPCs/Ships/Drone.gd"
 }, {
-"base": &"CharacterBody3D",
+"base": &"KinematicBody",
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
@@ -35,11 +35,17 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://NPCs/Stations/Station.gd"
 }, {
-"base": &"Area3D",
+"base": &"Area",
 "class": &"Turent",
 "icon": "",
 "language": &"GDScript",
 "path": "res://ECS/Terent.gd"
+}, {
+"base": &"Node",
+"class": &"TwitchChatManagerMessageFactory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://plugins/addons/twitch-chat-manager/TwitchChatManagerMessageFactory.gd"
 }, {
 "base": &"Area3D",
 "class": &"Weapon",
