--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,30 +13,30 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-429
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ProxyamStarsystem/GameWorld.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://ProxyamStarsystem/", "res://Player/", "res://NPCs/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://ProxyamStarsystem/GameWorld.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://ProxyamStarsystem/", "res://Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://NPCs/Stations/EnemyShipYard.tscn", "res://ProxyamStarsystem/game_world.tscn", "res://Player/Player.tscn", "res://UI/GameUI.tscn", "res://UI/UI.tscn")
-current_scene="res://Player/Player.tscn"
+open_scenes=PackedStringArray("res://UI/GameUI.tscn", "res://Player/Camera.tscn", "res://Player/test_player.tscn", "res://ProxyamStarsystem/game_world.tscn")
+current_scene="res://ProxyamStarsystem/game_world.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
-open_scripts=["res://ECS/Asteroid.gd", "res://ECS/Bullet.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://Player/PlayerCamera.gd", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://ECS/Terent.gd", "res://Player/Test-Player.gd", "res://ECS/TestBulit.gd", "res://ECS/Weapon.gd"]
+open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://Player/PlayerCamera.gd", "res://README.md", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://Player/Test-Player.gd", "res://UI/UI.gd", "res://VERSION.md", "res://ECS/Weapon.gd"]
 selected_script="res://ProxyamStarsystem/GameWorld.gd"
 open_help=[]
 script_split_offset=70
