--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,11 +1,11 @@
 list=Array[Dictionary]([{
-"base": &"Area",
+"base": &"Area3D",
 "class": &"Bullet",
 "icon": "",
 "language": &"GDScript",
 "path": "res://ECS/Bullet.gd"
 }, {
-"base": &"KinematicBody",
+"base": &"CharacterBody3D",
 "class": &"Crusier",
 "icon": "",
 "language": &"GDScript",
@@ -17,13 +17,13 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://NPCs/Stations/DefenseStation.gd"
 }, {
-"base": &"KinematicBody",
+"base": &"CharacterBody3D",
 "class": &"Drone",
 "icon": "",
 "language": &"GDScript",
 "path": "res://NPCs/Ships/Drone.gd"
 }, {
-"base": &"KinematicBody",
+"base": &"CharacterBody3D",
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
@@ -35,7 +35,7 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://NPCs/Stations/Station.gd"
 }, {
-"base": &"Area",
+"base": &"Area3D",
 "class": &"Turent",
 "icon": "",
 "language": &"GDScript",
