--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://NPCs/Stations/EnemyShipYard.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://NPCs/Stations/", "res://NPCs/Ships/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://NPCs/Executioner.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://NPCs/Ships/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
