--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://NPCs/Executioner.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://NPCs/Ships/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://Globals/Global.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://NPCs/Ships/", "res://Globals/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -37,7 +37,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://Player/PlayerCamera.gd", "res://README.md", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://Player/Test-Player.gd", "res://UI/UI.gd", "res://VERSION.md", "res://ECS/Weapon.gd"]
-selected_script="res://NPCs/Stations/EnemyShipYard.gd"
+selected_script="res://Globals/Global.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
