moving redundent code to compoents

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -101,12 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 23,
+"row": 2,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 2,
+"selection_to_column": 30,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -185,11 +189,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 51.0,
+"row": 80,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -227,16 +231,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
-"scroll_position": 11.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 20,
-"selection_to_column": 68,
-"selection_to_line": 20,
+"row": 18,
+"scroll_position": 18.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -245,16 +245,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 109.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 126,
-"selection_to_column": 1,
-"selection_to_line": 131,
+"row": 128,
+"scroll_position": 102.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -326,4 +322,32 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Plain Text"
+}
+
+[res://ECS/movment_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ECS/weapon_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
 }
