--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -101,16 +101,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 36,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 2,
-"selection_to_column": 30,
-"selection_to_line": 3,
+"selection_from_column": 11,
+"selection_from_line": 36,
+"selection_to_column": 12,
+"selection_to_line": 36,
 "syntax_highlighter": "GDScript"
 }
 
@@ -119,12 +119,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 34,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 109,
-"row": 76,
-"scroll_position": 50.0,
-"selection": false,
+"h_scroll_position": 0,
+"row": 74,
+"scroll_position": 57.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 71,
+"selection_to_column": 34,
+"selection_to_line": 74,
 "syntax_highlighter": "GDScript"
 }
 
@@ -192,9 +196,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 15.0,
-"selection": false,
+"row": 149,
+"scroll_position": 141.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 149,
+"selection_to_column": 13,
+"selection_to_line": 152,
 "syntax_highlighter": "GDScript"
 }
 
@@ -347,6 +355,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ECS/health_manager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 1,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
