refactored directory structure, moved Asteroid.gd to ProxyamStarsystem/

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,7 +3,7 @@ list=Array[Dictionary]([{
 "class": &"Bullet",
 "icon": "",
 "language": &"GDScript",
-"path": "res://ECS/Bullet.gd"
+"path": "res://ECS/wepoans/Bullet.gd"
 }, {
 "base": &"CharacterBody3D",
 "class": &"Crusier",
@@ -39,7 +39,7 @@ list=Array[Dictionary]([{
 "class": &"Turent",
 "icon": "",
 "language": &"GDScript",
-"path": "res://ECS/Terent.gd"
+"path": "res://ECS/ship-parts/Terent.gd"
 }, {
 "base": &"Node",
 "class": &"TwitchChatManagerMessageFactory",
@@ -51,5 +51,5 @@ list=Array[Dictionary]([{
 "class": &"Weapon",
 "icon": "",
 "language": &"GDScript",
-"path": "res://ECS/Weapon.gd"
+"path": "res://ECS/wepoans/Weapon.gd"
 }])
