--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ECS/Bullet.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://ECS/wepoans/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://ECS/", "res://addons/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,12 +27,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://ECS/movment_manager.tscn", "res://ECS/weapon_manager.tscn", "res://ECS/health_manager.tscn", "res://ECS/state_manager.tscn", "res://ECS/Bullet.tscn")
-current_scene="res://ECS/Bullet.tscn"
+open_scenes=PackedStringArray("res://ECS/managers/movment_manager.tscn", "res://ECS/managers/weapon_manager.tscn", "res://ECS/managers/health_manager.tscn", "res://ECS/managers/state_manager.tscn", "res://ECS/wepoans/Bullet.tscn")
+current_scene="res://ECS/wepoans/Bullet.tscn"
 center_split_offset=0
 selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 
 [ScriptEditor]
 
