--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ECS/wepoans/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Player/", "res://NPCs/", "res://ECS/", "res://addons/")
+dock_filesystem_selected_paths=PackedStringArray("res://ECS/managers/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://NPCs/Ships/", "res://ECS/", "res://ECS/managers/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://ECS/managers/movment_manager.tscn", "res://ECS/managers/weapon_manager.tscn", "res://ECS/managers/health_manager.tscn", "res://ECS/managers/state_manager.tscn", "res://ECS/wepoans/Bullet.tscn")
-current_scene="res://ECS/wepoans/Bullet.tscn"
+open_scenes=PackedStringArray("res://ECS/managers/movment_manager.tscn", "res://ECS/managers/weapon_manager.tscn", "res://ECS/managers/health_manager.tscn", "res://ECS/managers/state_manager.tscn", "res://Player/test_player.tscn", "res://Player/Player.tscn")
+current_scene=""
 center_split_offset=0
 selected_bottom_panel_item=1
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://ECS/Bullet.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://ECS/health_manager.gd", "res://NPCs/Stations/MainTower.gd", "res://ECS/movment_manager.gd", "res://Player/Player.gd", "res://Player/PlayerCamera.gd", "res://README.md", "res://UI/StartMenu.gd", "res://NPCs/Stations/Station.gd", "res://Player/Test-Player.gd", "res://UI/UI.gd", "res://VERSION.md", "res://ECS/Weapon.gd", "res://ECS/weapon_manager.gd"]
-selected_script="res://ECS/Bullet.gd"
+open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://ECS/Bullet.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://ECS/health_manager.gd", "res://NPCs/Stations/MainTower.gd", "res://ECS/movment_manager.gd", "res://Player/Player.gd", "res://README.md", "res://UI/StartMenu.gd", "res://State.gd", "res://ECS/managers/State.gd", "res://NPCs/Stations/Station.gd", "res://UI/UI.gd", "res://VERSION.md", "res://ECS/Weapon.gd", "res://ECS/weapon_manager.gd"]
+selected_script="res://ECS/managers/State.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
