--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -114,24 +114,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Player/Test-Player.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 74,
-"scroll_position": 57.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 71,
-"selection_to_column": 34,
-"selection_to_line": 74,
-"syntax_highlighter": "GDScript"
-}
-
 [res://NPCs/FaceTarget.gd]
 
 state={
@@ -207,12 +189,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
+"row": 56,
+"scroll_position": 47.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 41,
+"selection_to_column": 36,
+"selection_to_line": 56,
 "syntax_highlighter": "GDScript"
 }
 
@@ -281,20 +267,6 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Player/PlayerCamera.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 18,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 17,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -371,6 +343,34 @@ state={
 }
 
 [res://ECS/Bullet.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://State.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://ECS/managers/State.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
