--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -314,20 +314,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://SectorGenerator.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 49,
-"scroll_position": 21.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Root.gd]
 
 state={
@@ -338,6 +324,20 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Sector/SectorGenerator.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 49,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
