--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Sector/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://plugins/addons/", "res://addons/naejimer_3d_planet_generator/")
+dock_filesystem_selected_paths=PackedStringArray("res://NPCs/Ships/Drone.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://plugins/addons/", "res://NPCs/", "res://NPCs/Ships/", "res://ECS/", "res://addons/naejimer_3d_planet_generator/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,8 +36,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://ECS/managers/health_manager.gd", "res://NPCs/Stations/MainTower.gd", "res://Player/Player.gd", "res://README.md", "res://Root.gd", "res://Sector/SectorGenerator.gd", "res://UI/StartMenu.gd", "res://ECS/managers/State.gd", "res://NPCs/Stations/Station.gd", "res://UI/UI.gd", "res://VERSION.md"]
-selected_script="res://Sector/SectorGenerator.gd"
+open_scripts=["res://plugins/addons/analog/analog.gd", "res://plugins/addons/analog/bg.gd", "res://ECS/wepoans/Bullet.gd", "res://NPCs/Ships/Cursier.gd", "res://NPCs/Stations/DefenseStation.gd", "res://NPCs/Ships/Drone.gd", "res://NPCs/Stations/EnemyShipYard.gd", "res://Globals/Events.gd", "res://NPCs/FaceTarget.gd", "res://UI/FPS.gd", "res://UI/GameUI.gd", "res://ProxyamStarsystem/GameWorld.gd", "res://Globals/Global.gd", "res://UI/HBoxContainer.gd", "res://ECS/managers/health_manager.gd", "res://NPCs/Stations/MainTower.gd", "res://ECS/managers/movment_manager.gd", "res://Player/Player.gd", "res://README.md", "res://Root.gd", "res://Sector/SectorGenerator.gd", "res://UI/StartMenu.gd", "res://ECS/managers/State.gd", "res://NPCs/Stations/Station.gd", "res://UI/UI.gd", "res://VERSION.md", "res://ECS/managers/weapon_manager.gd"]
+selected_script="res://NPCs/Ships/Drone.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
