--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -157,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 142,
-"scroll_position": 37.0,
+"row": 76,
+"scroll_position": 69.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -288,7 +288,7 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 10,
-"folded_lines": Array[int]([11]),
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 45,
 "scroll_position": 15.0,
