--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://ECS/managers/state_manager.tscn", "res://Player/Player.tscn", "res://Sector/Sector.tscn")
-current_scene="res://Sector/Sector.tscn"
+current_scene="res://ECS/managers/state_manager.tscn"
 center_split_offset=0
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
